Changes in 1.8 (??.0?.2010)

 - Add xml example written by Yoran Bosman.

 - Add creation parameter which allows to disable highres timers on Windows upon device creation.

 - Several transparency setup bugs fixed.

 - Added a method to get real time and date in a human readable struct

 - Add IGUIElement::bringToBack (patch written by DtD, although I'm to blame for the function-name)

 - BurningVideo 
   - add Normalmap Rendering (one light only), pushed Burningvideo to 0.46
   - add Stencil Shadow Rendering (one color only and 32 bit only),
     pushed Burningvideo to 0.47
   - internal vertexformat changed
   - changed fixpoint from 9 to 10 bit fract resolution
   - renamed createBurningVideoDriver to createBurningVideoDriver and uses SIrrlichtCreationParameters like opengl
   - internal interfaces for the trianglerenders unified.

 - Example 11, changed the light billboards to use the light color.
   allow to disable the bump/parallax on the earth like in the room ( with transparency )

 - added DDS Image files, DXT2, DXT3, DXT4, DXT5, based on code from nvidia and Randy Reddig
 
 - added Halflife 1 Model Loader (based on code by Fabio Concas)
   Halflife 1.1.0.8, Counter-Strike 1.6 working
   -> Load all Textures ( can even optimize it to texture atlas ), all bone animation, all submodels.
   -> But to make use of the values (named animation, mouth animation)
      the Interface for IAnimatedMeshSceneNode has to be redone.
  
   TODO:
   ->can handle float frames numbers, the interface for getMesh should be reworked
   This is my idea of a new getMesh interface for IAnimatedMesh

   //! Returns the IMesh interface for a frame.
   /** \param frameA: Frame number as zero based index.
   The Blend Factor is in the fractional part of frameA
   The Mesh will be calculated as
    frame = integer(frameA) * (1-fractional(frameA )) + frameB * fractional(frameA)
    FrameNr  KeyFrameA   KeyFrameB
    40.0  1   0
    40.1  0.9   0.1
    40.5  0.5   0.5